# RUST-GUARD

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  REQUIREMENTS.md  RESEARCH.md  quality_exceptions.yaml
.cargo/: config.toml
config/: banned_words_exceptions.yaml  coverage_thresholds.yaml  sensitive_files_exceptions.yaml
docs/requirements/: REQ-GIT-GUARD.md
docs/specifications/: SPEC-GIT-GUARD-HARDENING.md  SPEC-GIT-GUARD-IMPL.md  SPEC-GIT-GUARD-INSTALL.md  SPEC-GIT-GUARD.md
scripts/: generate-hooks.sh
src/: args.rs  block.rs  exec.rs  main.rs
tests/: integration_test.rs
