[package]
name = "workspace-guard"
version = "0.1.0"
edition = "2021"
description = "Capability-based guard framework — blocks destructive commands, sanitises env, enforces WORKSPACE-CI contracts. Git PoC."

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
caps = "0.5"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
